--- a/scss/base/_transition.scss
+++ b/scss/base/_transition.scss
@@ -12,6 +12,10 @@ $transition_duration: 0.8s;
         -webkit-transition: $transition_duration all ease !important;
 }
 
+.form-item input {
+        transition: $transition_duration background-color ease !important;
+}
+
 .radio-selection {
         transition: 0.4s all ease !important;
         -webkit-transition: 0.4s all ease !important;
