--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 :root {
         /* Basic colors */
-        --scheme-color: #d4d4d4;
-        --highlight-color: #004b97;
+        // --scheme-color: #d4d4d4;
+        // --highlight-color: #004b97;
         --highlight-color-inverted: #d4d4d4;
         --base-color: black; // mostly for text <=> --scheme-color-inverted
         --base-color-muted: #4d4d4d; //lightMuted: #b2b2b2
@@ -20,22 +20,13 @@
         --container-padding: 40px;
         // TODO: sm - md...
 
-        // --transparency: 1;
-        // --scheme-color: rgba(212, 212, 212, var(--transparency));
-        // // prettier-ignore
-        // // --scheme-color-lighten: rgba(250,250,250,var(--transparency));
-        // // prettier-ignore
-        // --highlight-color: rgba(0, 75, 151, var(--transparency));
-        // // prettier-ignore
-        // // --highlight-color-darken: rgba(3,54,105,var(--transparency));
-        // --group-1-color: rgba(1, 114, 75, var(--transparency));
-        // --group-2-color: rgba(188, 91, 0, var(--transparency));
-        // --group-3-color: rgba(196, 6, 57, var(--transparency));
+        --scheme-color: 212, 212, 212;
+        --highlight-color: 0, 75, 151;
 }
 
 //SASS variables just to ease referecing in other SCSS files
-$schemeColor: var(--scheme-color);
-$highlightColor: var(--highlight-color);
+$schemeColor: RGB(var(--scheme-color));
+$highlightColor: RGB(var(--highlight-color));
 $contrastHighlightColor: var(--highlight-color-inverted);
 $baseColor: var(--base-color);
 $mutedBaseColor: var(--base-color-muted);
