--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -10,6 +10,7 @@ body,
 .blog .blog-item .before,
 .toggle .indicator {
         background-color: $schemeColor;
+        // background-color: RGB(var(--scheme-color));
 }
 
 .bg-highlight-color,
