--- a/scss/dynamic-style.scss
+++ b/scss/dynamic-style.scss
@@ -7,6 +7,7 @@
 @import "../components/basic/index";
 @import "../components/container/index";
 @import "../components/form/index";
+@import "../components/content/index";
 @import "styles/index";
 @import "init/index";
-@import "../backgrounds/index"
+@import "../backgrounds/index";
