--- a/scss/styles/_flat.scss
+++ b/scss/styles/_flat.scss
@@ -2,6 +2,12 @@
         #flat-customizer {
                 display: block !important;
         }
+        .button-border {
+                padding: 0;
+        }
+        input {
+                border: 0;
+        }
 
         .background-colorfull1,
         .background-colorfull2,
