--- a/components/form/_input.scss
+++ b/components/form/_input.scss
@@ -9,6 +9,7 @@
                         position: relative;
                         transition: border 0.9s ease;
                         padding: 1rem;
+                        border: 0;
                 }
         }
 }
