[Neu] Rewrite dynamic surface curvature using CSS custom property

--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1045,10 +1045,10 @@ input::-moz-focus-outer {
   border-radius: var(--border-radius);
   -webkit-transform: translate3d(-75%, 0, 0);
           transform: translate3d(-75%, 0, 0);
-  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
-  transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
-  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
-  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35), -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35) !important;
+  transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35) !important;
+  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35) !important;
+  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35), -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35) !important;
 }
 
 .toggle .toggle-state:checked ~ .indicator {
@@ -2468,6 +2468,8 @@ table,
   --spread: 0px;
   --scheme-color-lighten: #e6e6e6;
   --scheme-color-darken: #c2c2c2;
+  --light-surface-color: RGB(var(--scheme-color));
+  --dark-surface-color: RGB(var(--scheme-color));
   /*-------------------------
       FORM COMPONENTS
 -------------------------*/
@@ -2475,6 +2477,10 @@ table,
       CONTAINER COMPONENTS
 -------------------------*/
   /* TEXT DROP SHADOW */
+  /*-------------------------
+      BASIC COMPONENTS
+-------------------------*/
+  /* BUTTON */
 }
 
 .neu-style .dui-radio .indicator {
@@ -2493,13 +2499,13 @@ table,
 }
 
 .neu-style .range-slider .range-slider__value {
-  background-color: RGB(var(--scheme-color));
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
   -webkit-box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
           box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
 }
 
 .neu-style .range-slider .range-slider__range {
-  background-color: RGB(var(--scheme-color));
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
   -webkit-box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
           box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
 }
@@ -2516,12 +2522,21 @@ table,
           box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten),  inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
 }
 
+.neu-style .range-slider ::-webkit-slider-thumb {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
 .neu-style .dropdown button.focus,
 .neu-style .dropdown button:focus,
 .neu-style .dropdown .dropdown-label,
 .neu-style .dropdown .dropdown-menu {
   -webkit-box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
           box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
+.neu-style .dropdown .dropdown-toggle {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
 }
 
 .neu-style .dropdown button,
@@ -2548,9 +2563,50 @@ table,
           box-shadow: 3px 3px 4px var(--scheme-color-darken), 0px -3px 4px var(--scheme-color-lighten);
 }
 
+.neu-style .checkbox label {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color)) !important;
+}
+
+.neu-style .form-group input {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color)) !important;
+}
+
+.neu-style .form-group textarea {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
+.neu-style .segmented-control {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
 .neu-style .code-block {
   -webkit-box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
           box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
+.neu-style .box-border,
+.neu-style .image-border,
+.neu-style .badge-border,
+.neu-style .setting-panel {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
+.neu-style table thead {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
+.neu-style .blog-intro {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
+.neu-style .portfolio-single .modal-content {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+}
+
+.neu-style .button,
+.neu-style .setting-button {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
 }
 
 .neu-style .button-border,
