--- a/components/form/_toggle.scss
+++ b/components/form/_toggle.scss
@@ -6,7 +6,7 @@
 
         .label-text {
                 margin-left: 16px;
-                font-size: 1.2rem *$fontScale;
+                font-size: 1.2rem * $fontScale;
                 font-weight: 700;
         }
 }
@@ -28,10 +28,10 @@
                 width: 200%;
                 border-radius: $borderRadius;
                 transform: translate3d(-75%, 0, 0);
-                transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+                transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35) !important;
         }
 
-        .toggle-state:checked~.indicator {
+        .toggle-state:checked ~ .indicator {
                 transform: translate3d(25%, 0, 0);
         }
 }
