--- a/components/form/_input.scss
+++ b/components/form/_input.scss
@@ -1,5 +1,6 @@
 //wrapper
 .form-item {
+        margin-bottom: 10px;
         .form-group {
                 margin: 0;
                 .form-control {
@@ -9,6 +10,7 @@
                         position: relative;
                         transition: border 0.9s ease;
                         padding: 1rem;
+
                         // border: 0;
                 }
         }
