[WinXP] Add CSS custom properties

--- a/scss/styles/_win98.scss
+++ b/scss/styles/_win98.scss
@@ -218,7 +218,7 @@
         }
 
         //BASIC COMPONENTS
-        /* Button */
+        /* BUTTON */
         .button {
                 background: $surface;
                 box-shadow: $border_raised_outer, $border_raised_inner;
